...
                    android:maxLines="2"
                    android:text="@string/menu_new_game_subtitle"
                    android:textAppearance="@style/TextAppearance.ZenSudoku.Menu.Subtitle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Resume"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_play_tile_height"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_marginStart="@dimen/menu_grid_half_gap"
                android:background="@drawable/menu_play_tile_background"
...
