...
                    android:id="@+id/hintsMetric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:minHeight="@dimen/gameplay_pause_size"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/pauseButton"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
...
